--- a/docker_compose.yaml
+++ b/docker_compose.yaml
@@ -21,5 +21,20 @@ services:
     ports:
       - "8080:80"
 
+  dbt:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./dbttest:/dbttest
+    environment:
+      DBT_PROFILES_DIR: /dbttest/profiles
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    stdin_open: true
+    tty: true
+    container_name: dbt
+
 volumes:
   db-data:
