--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ python = "~3.10"
 pandas = "^2.2.0"
 sqlalchemy = "^2.0.27"
 python-dotenv = "^1.0.1"
-psycopg2 = "^2.9.9"
 dbt-postgres = "^1.7.8"
+psycopg-binary = "^3.1.18"
 
 
 [build-system]
