--- a/docker_compose.yaml
+++ b/docker_compose.yaml
@@ -34,6 +34,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     stdin_open: true
     tty: true
+    ports:
+      - "8090:8080"
     container_name: dbt
 
 volumes:
